--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -36,4 +36,4 @@ reference:
 home :
   links:
   - text: Source code at
-    href: https://gitlab.osupytheas.fr/vgodard/geomorphology
+    href: https://vincentgodard.github.io/gtbox
