Add read/write grass functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Imports: fields,
          rgeos,
          rgdal,
          rgrass7,
-         sp
+         sp,
+         terra
 Depends: 
     R (>= 2.10)
 RoxygenNote: 7.1.1
