remove call to use_sp

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Imports: fields,
          raster,
          rgeos,
          rgdal,
-         rgrass7,
+         rgrass,
          sf,
          sp,
          terra
